--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <title>My Bio Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+    <style>
+        .temp{
+            border-radius : 50%;
+            background-color: red;
+        }
+    </style>
+    </head>
 <body>
     <div class="container">
         <div class="row">
             <div id="bio" class="col-12 col-lg-6 text-center">
                 <h1>Abhishek Mishra</h1>
-                <img src="hacker.png" class="img-fluid">
+                <img src="mineS.jpg" class="img-fluid temp">
             </div>
             <div id="more" class="col-12 col-lg-6"> 
                 <h2>Education</h2>
