--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         <td><a href="https://github.com/AbhiMisRaw" class="btn btn-primary">Github</a></td>
                     </tr>
                     <tr>
-                        <th scope="row">EShpoers</th>
+                        <th scope="row">EShopers</th>
                         <td>Servlet & JSP (Java)</td>
                         <td>2022</td>
-                        <td><a href="https://github.com/AbhiMisRaw" class="btn btn-primary">Github</a></td>
+                        <td><a href="https://github.com/AbhiMisRaw/EShoppers" class="btn btn-primary">Github</a></td>
                     </tr>
                     <tr>
                         <th scope="row">Space Invader</th>
