--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">MCA</th>
-                        <td>KIET Froup Of Institutions</td>
+                        <td>KIET Group Of Institutions</td>
                         <td>Pursuing</td>
                         <td>79%</td>
                       </tr>
