--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               
               <div class="col-sm-12 col-lg-8 mx-auto">
                 <div class="h3">Abhishek Mishra</div>
-                <div>A Frontend focused Web Developer building the Frontend of Websites and Web <br>Applications that leads to the success of the overall product</div>
+                <div>A Backend focused Web Developer building the backend of Websites and Web <br>Applications that leads to the success of the overall product</div>
               </div>
               
             </div> 
